Another instance where a stream could use the 'toList()' method instead of .collect(Collectors.toList())